src/pages/Home/HomePage.css
.HomePage {
  font-family: 'Noto Sans', cursive;
}

/* Header section  */
.HomePage__header {
  margin: 0 10%;
  display: flex;
  height: 100vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.HomePage__header-h1 {
  font-size: 4rem;
  font-weight: 900;
}

.HomePage__header-p {
  line-height: 1.625;
  margin-top: 10px;
  letter-spacing: 0.8px;
}

.txt-linear-gradient-pink {
  background: -webkit-linear-gradient(#f1e9ef, #e00ce7);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Features section  */
.HomePage__features {
  margin: 100px 10%;
  height: 100vh;
}

.HomePage__features-h1 {
  text-align: center;
  font-size: 2rem;
}

.HomePage__features-box {
  margin: 50px 0;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

/* Media queries */
@media (max-width: 694px) {

  .img2,
  .img1 {
    display: none;
  }
}

